pdf e tex da prova, versão inicial ainda com pendências.

--- a/aquecimento/prova/parouimpar/parouimpar.tex
+++ b/aquecimento/prova/parouimpar/parouimpar.tex
@@ -1,4 +1,4 @@
-\problema{(Contando Múltiplos)}
+\problema{Contando Múltiplos}
 
 \begin{descricao}
 Dada uma lista de $n$ números, você deve contar quantos são pares.
