--- a/aquecimento/prova/soma/soma.tex
+++ b/aquecimento/prova/soma/soma.tex
@@ -1,4 +1,4 @@
-\problema{(Soma)}
+\problema{Soma}
 
 \begin{descricao}
 Dada uma lista de pares de inteiros, você deve calcular a soma de cada par.
