nova versao da prova

--- a/prova/ultimos/ultimos.tex
+++ b/prova/ultimos/ultimos.tex
@@ -3,7 +3,7 @@
 \begin{descricao}
 Éric Ruiz Irrigado, o famoso Erí, é conhecido entre seus amigos por querer fazer previsões. Em todo tipo de competição ou evento esportivo ele sempre tenta adivinhar os vencedores, os perdedores, artilheiros e coisas similares. Apesar das brincadeiras e deboches de seus amigos, Erí nunca desistiu e sempre busca padrões onde os outros vêem apenas coincidências.
 
-Acompanhando os times da Maratona de Programação, Erí percebeu que a colocação dos times de seu estado na primeira fase sempre se invertiam na segunda fase, ainda que outros times de outras regiões do país estivessem entre eles. Assim, se o time da Uni1 ficar na frente da Uni2 na primeira fase, Erí imagina que o time da Uni2 ficará na frente do time da Uni1 na segunda fase.
+Acompanhando os times da Maratona de Programação, Erí percebeu que a colocação dos times de seu estado na primeira fase sempre se invertiam na segunda fase, ainda que outros times de outras regiões do país estivessem entre eles. Assim, se o time da \emph{Uni1} ficar na frente da \emph{Uni2} na primeira fase, Erí imagina que o time da \emph{Uni2} ficará na frente do time da \emph{Uni1} na segunda fase.
 
 Para validar sua hipótese, ele quer desenvolver um programa que, dada uma lista de colocação dos times na primeira fase, mostre qual será a posição relativa destes mesmos times na segunda fase.
 \end{descricao}
