--- a/prova/arquipelago/arquipelago.tex
+++ b/prova/arquipelago/arquipelago.tex
@@ -15,7 +15,7 @@ Encontre uma disposição de navios que satisfaça as restrições, se possível.
 \end{descricao}
 
 \begin{entrada}
-A entrada contém vários casos de teste. A descrição de cada caso de teste começa com uma linha contendo dois inteiros $2 \leq n \leq MAXN$ e $2 \leq m \leq MAXM$ separados por um espaço, onde $n$ representa o número de linhas do mapa e $m$ o número de colunas.
+A entrada contém vários casos de teste. A descrição de cada caso de teste começa com uma linha contendo dois inteiros $2 \leq n \leq 50$ e $2 \leq m \leq 50$ separados por um espaço, onde $n$ representa o número de linhas do mapa e $m$ o número de colunas.
 
 Em seguida, seguem $n$ linhas contendo $m$ caracteres cada que descrevem o mapa do arquipélago. O caracter `.' (ponto) marca um quadrante de água. Quadrantes de terra são representados pelo caracter 'X'. Portos, que devem ter uma quantidade específica de navios ancorados em suas adjacências, são representados por um número entre 0 e 4 cujo valor é exatamente a quantidade de navios que devem estar nas adjacências.
 
