--- a/prova/esconde/esconde.tex
+++ b/prova/esconde/esconde.tex
@@ -3,7 +3,7 @@
 \begin{descricao}
 João, que gosta de informática, procura pensar em como seria um programa para automatizar tudo que ele faz no seu dia a dia. Maria o desafiou a fazer um programa que fosse útil de algum jeito para quando eles brincarem de pique esconde.
 
-João teve uma ideia muito boa de um programa, mas como ele ainda está em suas primeiras aulas de informática, ainda não descobriu como implementar essa ideia. Assim, você deve ajudá-lo. A ideia de João é numerar as crianças participando da brincadeira de 1 a n. O programa recebe como entrada o número total de crianças e também o número correspondente à criança que está procurando os demais participantes. Depois, o programa recebe uma lista com n-2 números identificando as crianças que já foram encontradas e deve responder qual a criança que está faltando.
+João teve uma ideia muito boa de um programa, mas como ele ainda está em suas primeiras aulas de informática, ainda não descobriu como implementar essa ideia. Assim, você deve ajudá-lo. A ideia de João é numerar as crianças participando da brincadeira de $1$ a $n$. O programa recebe como entrada o número total de crianças e também o número correspondente à criança que está procurando os demais participantes. Depois, o programa recebe uma lista com $n-2$ números identificando as crianças que já foram encontradas e deve responder qual a criança que está faltando.
 
 Sua tarefa é implementar esse programa e ajudar João a mostrar para Maria que a informática pode ser útil até nas mais simples tarefas.
 
