pequenas correçÕes

--- a/prova/caminho/caminho.tex
+++ b/prova/caminho/caminho.tex
@@ -29,7 +29,7 @@ A entrada possui vários casos de teste. Cada caso de teste começa com uma linha 
 
 Em seguida, a entrada contém $n$ linhas com um inteiro cada, onde o inteiro da $i$-ésima representa a qualidade do bar $i$. Por fim, seguem $n$ linhas com $n$ inteiros cada, representando a distância entre o bar da $i$-ésima linha ao bar do $j$-ésimo inteiro da linha.
 
-A entrada termina com uma linha "0 0" que não deve ser processada.\end{entrada}
+A entrada termina com uma linha ``0 0'' que não deve ser processada.\end{entrada}
 
 
 \begin{saida}
