--- a/prova/rush/rush.tex
+++ b/prova/rush/rush.tex
@@ -18,7 +18,7 @@ Assuma que o prédio possui várias saídas de garagem para cada rua adjacente ao p
 \begin{entrada}
 A entrada é composta por vários casos de teste.
 
-A primeira linha de cada caso de teste contém três inteiros, $p$, $n$ e $m$, ($1 \leq p \leq 1000$, $2 \leq n \leq 100$, $1 \leq m \leq \frac{n(n-1)}{2}$) representando o número de funcionários da empresa, o número de interseções e o número de vias existentes na cidade, respectivamente. As interseções são numeradas de $1$ a $n$, onde $1$ representa o local de trabalho. As interseções que não possuem vias levando a outras interseções representam os bairros de interesse.
+A primeira linha de cada caso de teste contém três inteiros, $p$, $n$ e $m$, ($1 \leq p \leq 1000$, $2 \leq n \leq 100$, $1 \leq m \leq n(n-1)$) representando o número de funcionários da empresa, o número de interseções e o número de vias existentes na cidade, respectivamente. As interseções são numeradas de $1$ a $n$, onde $1$ representa o local de trabalho. As interseções que não possuem vias levando a outras interseções representam os bairros de interesse.
 
 Em seguida, seguem-se $m$ linhas, cada uma contendo três inteiros $u$, $v$ e $w$ ($1 \leq u, v \leq n$, $1 \leq w \leq 10$) representando uma via que leva da interseção $u$ até a interseção $v$ com $w$ faixas de rolamento livres. Entre duas interseções existe, no máximo, uma única via em cada direção.
 
