--- a/prova/quadrado/quadrado.tex
+++ b/prova/quadrado/quadrado.tex
@@ -1,13 +1,14 @@
 \problema{Cada um no seu quadrado}
 
 \begin{descricao}
-Ana e Bob gostam de brincar de geometria. Semana passada, enquanto ouviam uma canção que falava de quadrados, Bob, que estava brincando com seus blocos de madeira, se perguntou quantos quadrados poderiam ser formados usando os blocos como vértices, mas sem movê-los. Ana, que aprendeu a programar recentemente, teve a ideia de desenvolver um programa para resolver esse problema. Entretanto, Ana teve dificuldade para resolver esse problema e decidiu pedir a sua ajuda.\end{descricao}
+Ana e Bob gostam de brincar de geometria. Semana passada, enquanto ouviam uma canção que falava de quadrados, Bob, que estava brincando com seus blocos de madeira, se perguntou quantos quadrados poderiam ser formados usando os blocos como vértices, mas sem movê-los. Ana, que aprendeu a programar recentemente, teve a ideia de desenvolver um programa para resolver esse problema. Entretanto, Ana teve dificuldade para resolver esse problema e decidiu pedir a sua ajuda. Como os blocos são pequenos quando comparados à distância entre eles, você pode assumir que eles são pontos em um plano.
+\end{descricao}
 
 \begin{entrada}
 A entrada consiste de multiplos casos de teste. Cada caso de teste começa com uma linha contendo um único inteiro $4 \leq n \leq 1.000$. As $n$ linhas seguintes contém $2$ inteiros $x$ e $y$ cada, $-1.000.000 \leq x, y \leq 1.000.000$, referentes às coordenadas dos blocos. A entrada termina com uma linha contendo $n=0$, que não deve ser processada.\end{entrada}
 
 \begin{saida}
-Para cada caso de teste, você deve imprimir uma linha contendo um único inteiro, o número quadrados que podem ser obtidos a partir das posições dadas.
+Para cada caso de teste, você deve imprimir uma linha contendo um único inteiro, o número de quadrados que podem ser obtidos a partir das posições dadas.
 \end{saida}
 
 \exemplos{0.47}{0.47}
