Ajuste das capas das provas.

--- a/aquecimento/prova/aquecimento.tex
+++ b/aquecimento/prova/aquecimento.tex
@@ -12,7 +12,7 @@
 
 \begin{document}
 
-\capa{I Escola Regional de Informática do Rio de Janeiro (ERI-RJ 2011)}{minerva_ufrj}{1.0}{Meia Maratona de Programação}{Caderno de Questões - Aquecimento}
+\capa{II Escola Regional de Informática do Rio de Janeiro (ERI-RJ 2011)}{minerva_ufrj}{1.0}{Meia Maratona de Programação}{Caderno de Questões - Aquecimento}
 
 \incluiproblema{soma}
 
