--- a/prova/arquipelago/arquipelago.tex
+++ b/prova/arquipelago/arquipelago.tex
@@ -5,7 +5,7 @@ Você foi encarregado de dispor os navios da frota naval do seu país para protege
 
 As condições para a distribuição dos navios são as seguintes:
 \begin{itemize}
-\item Cada navio consegue monitorar os quadrantes nas direções horizontais e verticais do quadrante do navio, a não ser que sua visão seja bloqueada por um quadrante de terra.
+\item Cada navio consegue monitorar os quadrantes nas direções horizontal e vertical do quadrante do navio, a não ser que sua visão seja bloqueada por um quadrante de terra.
 \item Navios somente podem ser colocados em quadrantes de água.
 \item Alguns quadrantes de terra são portos e possuem necessidades especiais, devendo ser guardados por uma certa quantidade de navios em quadrantes adjacentes a eles, a norte, sul, leste ou oeste.
 \item A fim de evitar fogo amigo, navios não podem ser capazes de vigiar quadrantes de água contendo outro navio da sua frota.
