Últimas correções da prova.

--- a/prova/prova.tex
+++ b/prova/prova.tex
@@ -13,7 +13,7 @@
 
 \begin{document}
 
-\capa{II Escola Regional de Informática do Rio de Janeiro (ERI-RJ 2011)}{minerva_ufrj}{1.0}{Meia Maratona de Programação}{Caderno de Questões}
+\capa{II Escola Regional de Informática do Rio de Janeiro (ERI-RJ 2011)}{minerva_ufrj}{1.0}{Maratona de Programação}{Caderno de Questões}
 
 
 %{10, 1, 5, 12, 7, 11, 8, 6, 4, 9, 2, 3}
