--- a/prova/rush/rush.tex
+++ b/prova/rush/rush.tex
@@ -5,27 +5,42 @@ Em toda cidade vemos que algumas vias são mais largas que outras. Isto é, alguma
 
 É comum termos a sensação de que, na hora do rush (aquele período em que a maior parte da população se desloca de casa para o trabalho ou vice-versa), nunca existem faixas de rolamento suficientes por conta do congestionamento que se forma.
 
-Roberval, nosso herói trabalhador, trabalha em uma empresa muito preocupada com a qualidade de vida de seus funcionários. O novo projeto da empresa é mudar a hora de saída do trabalho para um horário de menos trânsito. Roberval, claro, foi eleito para descobrir qual é o melhor horário.
+Roberval, nosso herói trabalhador, trabalha na companhia de engenharia de tráfego da SBCity. Seu chefe está muito preocupado com as condições de trânsito da cidade, pois, com a instalação iminente de uma nova empresa na cidade, a Empresa de Reciclagem Insubstituível do Rio de Janeiro, ERI-RJ, o número de veículos circulando aumentará consideravelmente. Assim, ele quer fazer uma análise sobre a possibilidade de surgimento de novos engarrafamentos e Roberval, claro, foi eleito para descobrir se eles ocorrerão.
 
-Sua idéia é bem simples: simular a situação do trânsito em diferentes horários na cidade. Mais especificamente, o trânsito do local de trabalho para alguns bairros de interesse, onde moram os funcionários da empresa.
+Sua idéia é bem simples: simular a situação do trânsito. Mais especificamente, o trânsito do local onde a ERI irá se instalar para alguns bairros de interesse, onde morarão os funcionários da empresa. A quantidade de funcionários morando em cada um desses bairros dependerá da facilidade de acesso a esses bairros. Portanto, você pode assumir que os funcionários são indiferentes ao bairro onde morarão.
 
-Dado um mapa de ruas da cidade onde Roberval mora e a quantidade de faixas de rolamento livres em cada trecho para um dado horário, diga se é possível que todos os funcionários da empresa saiam do trabalho ao mesmo tempo ou se irão encontrar a mesma situação desagradável do dia-a-dia: mais carros na rua do que as vias comportam.
+Quando der a hora de saída do trabalho, todos os funcionário da ERI-RJ
+começarão a sair furiosamente em direção às suas casas num fluxo
+constante de veículos que levará algumas horas para cessar. Como o estacionamento da empresa é bem grande mas com apenas uma saída para cada rua, a quantidade de carros saindo da empresa por segundo é limitada.
 
-Assuma que o prédio possui várias saídas de garagem para cada rua adjacente ao prédio, e que todos os cidadãos da cidade são educados no trânsito, ou seja, ninguém trafega no espaço entre dois carros posicionados em faixas de rolamento adjacentes.
+Roberval fez uma modelagem simplificada da cidade e quer saber se
+existe capacidade para receber todos esses veículos sem criar gargalos
+nas ruas da cidade.
+Lembre-se que os motoristas de SBCity não se
+importam de percorrerem caminhos maiores desde que não encontrem
+gargalos pela frente nem de alterarem seus caminhos para que outros motoristas também possam chegar até suas casas sem trânsito.
+
+Dado um mapa de ruas da SBCity e a quantidade de carros por segundo
+que cada via comporta, diga se é possível que os funcionários da
+empresa saiam do trabalho ao mesmo tempo sem enfrentar os
+desagradáveis congestionamentos do dia-a-dia.
+
+%Assuma que o prédio possui saídas de garagem para cada rua adjacente ao prédio, e que todos os cidadãos da cidade são educados no trânsito, ou seja, ninguém trafega no espaço entre dois carros posicionados em faixas de rolamento adjacentes.
 
 \end{descricao}
 
 \begin{entrada}
 A entrada é composta por vários casos de teste.
 
-A primeira linha de cada caso de teste contém três inteiros, $p$, $n$ e $m$, ($1 \leq p \leq 1000$, $2 \leq n \leq 100$, $1 \leq m \leq n(n-1)$) representando o número de funcionários da empresa, o número de interseções e o número de vias existentes na cidade, respectivamente. As interseções são numeradas de $1$ a $n$, onde $1$ representa o local de trabalho. As interseções que não possuem vias levando a outras interseções representam os bairros de interesse.
+A primeira linha de cada caso de teste contém três inteiros, $p$, $n$ e $m$, ($1 \leq p \leq 1000$, $2 \leq n \leq 100$, $1 \leq m \leq n(n-1)$) representando a quantidade máxima de carros saindo da empresa por segundo, o número de interseções e o número de vias existentes na cidade, respectivamente. As interseções são numeradas de $1$ a $n$, onde $1$ representa o local onde a ERI-RJ irá se instalar. As interseções que não possuem vias levando a outras interseções representam os bairros de interesse.
 
-Em seguida, seguem-se $m$ linhas, cada uma contendo três inteiros $u$, $v$ e $w$ ($1 \leq u, v \leq n$, $1 \leq w \leq 10$) representando uma via que leva da interseção $u$ até a interseção $v$ com $w$ faixas de rolamento livres. Entre duas interseções existe, no máximo, uma única via em cada direção.
+Em seguida, seguem-se $m$ linhas, cada uma contendo três inteiros $u$, $v$ e $w$ ($1 \leq u, v \leq n$, $1 \leq w \leq 10$) representando uma via de mão única que leva da interseção $u$ até a interseção $v$ com capacidade para $w$ veículos por segundo. Entre duas interseções existe, no máximo, uma única via em cada direção.
 
-A entrada termina com $p = n = m = 0$. Este caso não deverá ser processado.\end{entrada}
+A entrada termina com $p = n = m = 0$. Este caso não deverá ser processado.
+\end{entrada}
 
 \begin{saida}
-Para cada caso de teste haverá uma linha na saída. Caso seja possível que todos os $p$ funcionários saiam ao mesmo tempo do trabalho sem enfrentar trânsito até suas casas, imprima ``HORARIO BOM''. Caso contrário, imprima ``HORARIO RUIM''. Atenção, não utilize acentuação!
+Para cada caso de teste haverá uma linha na saída. Caso seja possível que todos os funcionários saiam ao mesmo tempo do trabalho sem encontrar gargalos até suas casas, imprima ``SEM GARGALOS''. Caso contrário, imprima ``COM GARGALOS''. Atenção, não utilize acentuação!
 \end{saida}
 
 \exemplos{0.47}{0.47}
@@ -38,8 +53,8 @@ Para cada caso de teste haverá uma linha na saída. Caso seja possível que todos 
 3 4 1\pl
 0 0 0
 }
-{HORARIO BOM\pl
-HORARIO RUIM
+{SEM GARGALOS\pl
+COM GARGALOS
 }
 
 %\pb
